--- a/style.css
+++ b/style.css
@@ -27,3 +27,29 @@
 .component-fade-leave-to {
   opacity: 0;
 }
+
+
+/* .marquee {
+	animation: marquee-anim 10s linear infinite;
+}
+
+@keyframes marquee-anim {
+	0%   { transform: translate(100%, 0); }
+	100% { transform: translate(-10%, 0); }
+} */
+
+.marquee {
+  display: flex;
+  white-space: nowrap;
+  overflow: hidden;
+  gap: 1rem;
+  font-size: small;
+}
+/* .marquee-inner {
+  animation: marquee 15s linear infinite;
+} */
+ 
+@keyframes marquee {
+  0%   { translate: 0; }
+  100% { translate: calc(-100% - 1rem); }
+}
